# hdiffpatch-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  cythonize.py  pyproject.toml  rebuild.py  setup.py
.github/workflows/: build_wheels.yaml  tests.yaml
docs/source/: Installation.rst  Performance.rst  api.rst  conf.py  index.rst
docs/source/_static/: custom.css
hdiffpatch/: __init__.py  _bzip2_config.py  _c_extension.pyi  _c_extension.pyx  _lzma_config.py  _tamp_config.py  _zlib_config.py  _zstd_config.py
hdiffpatch/_c_src/: tamp_compress_plugin.cpp
tests/: conftest.py  test_apply_patch.py  test_binary_compatibility.py  test_bzip2_config.py  test_compression.py  test_create_diff.py  test_edge_cases.py  test_error_translation.py  test_exceptions.py  test_lzma_config.py  test_recompress.py  test_round_trip.py  test_tamp_compression.py  test_tamp_config.py  test_tamp_incompressible.py  test_threading.py  test_zlib_config.py  test_zstd_config.py
tests/binaries/: README.md  RPI_PICO-20241129-v1.24.1_to_RPI_PICO-20250415-v1.25.0.hdiff  RPI_PICO-20241129-v1.24.1_to_RPI_PICO-20250415-v1.25.0.hdiff.lzma  RPI_PICO-20241129-v1.24.1_to_RPI_PICO-20250415-v1.25.0.hdiff.tamp  RPI_PICO-20241129-v1.24.1_to_RPI_PICO-20250415-v1.25.0.hdiff.tamp-v1  RPI_PICO-20241129-v1.24.1_to_RPI_PICO-20250415-v1.25.0.hdiff.zlib
tools/: benchmark.py  micropython-binary-demo.py
